--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
       <div class="container">
          <div align="right"; class="container col-1">
             <a class="navbar-brand" href="/">
-               <%= image_tag 'ten.jpg',:width => "130",  :height=>"130" %>
+               <%= image_tag 'ten.png',:width => "130",  :height=>"130" %>
             </a>
          </div>
 
