--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,9 +1,9 @@
 
+<%= render 'shared/header' %>
 <%= render 'shared/header2' %>
 <br>
 <div class="container col-11" class="text-center">
-    <div class="row g-2">
-        <div class="col-sm-4">
-        </div>    
-    </div>
+    <div class="col-sm-4">
+            <%= link_to image_tag("calendar2.png", class: "calendar"), calendar_path(Date.today.year), class: 'btn btn-outline-primary'  %>
+    </div>    
 </div> 
