--- a/app/views/places/edit.html.erb
+++ b/app/views/places/edit.html.erb
@@ -1,9 +1,9 @@
 <%= render 'shared/header' %>
 
 <br>
-<div class="container col-5" 
+<div class="container col-11" 
     <br>
     <h2 class="display-5"><%= t('.title') %></h2>
     <hr>
 </div>    
-<%= render 'form' %>  
+<%= render 'form' %>  p
