--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,9 +35,9 @@
   }
   
  .calendar {
-    width: 120px;
+    width: 220px;
     height: auto;
-    text-align: right;
+    text-align: center;
 }  
 
 .firma{
